--- a/ceng_2034_midterm_report.tex
+++ b/ceng_2034_midterm_report.tex
@@ -10,6 +10,7 @@
 \usepackage{microtype}
 \usepackage{amsmath}
 \usepackage{subfigure}
+\usepackage{hyperref}
 % Letterspacing macros
 \newcommand{\spacecaps}[1]{\textls[200]{\MakeUppercase{#1}}}
 \newcommand{\spacesc}[1]{\textls[50]{\textsc{\MakeLowercase{#1}}}}
@@ -27,12 +28,13 @@
 	Today, this is the world of computers. Almost everything connected with computers. That's why humanity needs people who can speak the language of computers. These people are programmers.  However, if a programmers want to be a good programmer, they need to understand how operating system works. They need to understand processed of the operating system in the background. Understanding the processes is important to understand the computer.
 \end{abstract}
 
+\subsection*{Github Page}
+\url{https://github.com/furkanbaldir/ceng\_2034\_2020\_midterm} 
 
 \section{Introduction}
 In this homework, our goal is learning processes of computers, how threads works, and how we can implement these thing with python. In my opinion, this lab has a specific purpose: learning to be a good programmer. Because operating systems are bridge between user and hardware and we need to use this bridge efficiently to make good programs.
 
 \section{Assignments}
-This section should describe what work was done and how, specifically how you solved the different tasks. For this type of lab report it can be beneficial to put each assignment in its own subsection.
 
 \subsection{What I used in project}
 
@@ -105,5 +107,4 @@ To conclude this project, on GNU / Linux, every application create new processes
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
-
 
